# coremind

./: .dockerignore  CoreMind_Architecture_Contract.md  Dockerfile  README.md  check_webhook.py  coremind.db  gmail_credentials.json  gmail_token.json  pyproject.toml  requirements.lock.txt  requirements.txt  run.txt  structure.md  test_store.py  test_supabase.py  tree.py  verify_count.py
.coremind/: gmail_credentials.json  gmail_token.pkl
api/: index.py
coremind/: main.py  state.py
coremind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
coremind/agents/argus/: agent.py  prompt.py
coremind/agents/atlas/: intent_satisfaction.py  node.py  objective_compiler.py  parser.py  prompt.py
coremind/agents/iris/: prompt.py  resolver.py
coremind/agents/nemesis/: agent.py  node.py  prompt.py
coremind/agents/nexis/: agent.py  node.py  prompt.py
coremind/api/: server.py
coremind/graph/: graph.py  validate.py  validate_node.py
coremind/infrastructure/smart_home/: device_registry.py  devices.yaml
coremind/integrations/gmail/: client.py
coremind/integrations/telegram/: bot.py
coremind/llms/: factory.py
coremind/memory/: memory_store.py
coremind/objectives/: registry.py  spec.py  validate.py
coremind/scripts/: set_webhook.py
coremind/server/: api.py  session_store.py
coremind/services/iris/: prompt.py  resolver.py
coremind/storage/: session_store.py
coremind/tools/: registry.py  registry.py.bak  schemas.py
tests/: test_smart_control.py
workspace/: html  index.html
workspace/coremind/landing-page/: index.html
workspace/tution_center/: index.html
(+25 files in other folders)
