[project]
name = "coremind"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "langgraph>=0.1.20",
  "langchain>=0.2.0",
  "langchain-core>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-groq>=0.1.0",
  "langchain-ollama>=0.1.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.5.0",
  "typing-extensions>=4.9.0",
  "rich>=13.7.0",
  "loguru>=0.7.2",
  "google-auth>=2.29.0",
  "google-auth-oauthlib>=1.2.0",
  "google-api-python-client>=2.120.0",
  "duckduckgo-search>=8.1.1",
  "beautifulsoup4>=4.14.3",
  "requests>=2.32.5",
  "tzlocal>=5.3.1",
  "ddgs>=9.10.0",
  "python-telegram-bot>=22.6",
  "aiosqlite>=0.22.1",
  "langchain-huggingface>=1.2.0",
  "uvicorn>=0.40.0",
  "fastapi>=0.129.0",
  "openai>=2.30.0",
  "supabase>=2.28.3",
  "asyncpg>=0.31.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "ruff>=0.6.8",
  "pre-commit>=3.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
